--- a/sttconfigdemo.properties
+++ b/sttconfigdemo.properties
@@ -1,4 +1,4 @@
-foo: 'Property Setup'
-bar: 'Custom Factor'
-info.description: 'Super Description'
-info.url: 'http:\\google.com'
+foo: Property Altered
+bar: Custom Factors
+info.description: New Description
+info.url: http:\\www.google.com
